--- a/style.css
+++ b/style.css
@@ -11,13 +11,16 @@
   margin-bottom: 30px;
   margin-top: 20px;
 }
+.header h1 {
+  font-size: 45px;
+}
 .header,
 .gallery {
   margin-left: 50px;
   margin-right: 50px;
 }
 .header-right {
-  font-size: 20px;
+  font-size: 25px;
   font-weight: 600;
   display: flex;
   list-style-type: none;
@@ -29,6 +32,7 @@
   margin-bottom: 20px;
 }
 .middle-container h1 {
+  font-size: 40px;
   padding-top: 20px;
   margin-bottom: 20px;
   margin-left: 40px;
@@ -42,6 +46,7 @@
   margin-right: 40px;
 }
 .img-container p {
+  font-size: 28px;
   text-align: justify;
   width: 50%;
 }
